--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/3PCgg8o4EB?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.name=root
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/9bgO79mG0B
+##spring.datasource.url=jdbc:mysql://127.0.0.1:3306/3PCgg8o4EB?serverTimezone=UTC
+spring.datasource.username=9bgO79mG0B
+##spring.datasource.username=root
+
+spring.datasource.name=9bgO79mG0B
+##spring.datasource.name=root
+
 spring.datasource.hikari.maximum-pool-size=2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.useUnicode=true
