--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
-url=jdbc:mysql://127.0.0.1:3306/3PCgg8o4EB?serverTimezone=UTC
-username=root
-password=root
-driver=com.mysql.jdbc.Driver
+url=jdbc:mysql://remotemysql.com:3306/9bgO79mG0B
+username=9bgO79mG0B
+password=yCFUrFdqr8
+driver=com.mysql.cj.jdbc.Driver
 outputChangeLogFile=src/main/resources/liquibase-outputChangeLog.xml
