--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.properties.useUnicode=true
 spring.jpa.properties.characterEncoding=UTF8
 spring.jpa.properties.CharSet=UTF8
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
