* set default database of ingredients

--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
-url=jdbc:mysql://remotemysql.com:3306/9bgO79mG0B
-username=9bgO79mG0B
-password=yCFUrFdqr8
+url=jdbc:mysql://localhost:3306/ingredient?serverTimezone=UTC
+username=root
+password=root
 driver=com.mysql.cj.jdbc.Driver
 outputChangeLogFile=src/main/resources/liquibase-outputChangeLog.xml
