--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/9bgO79mG0B
-spring.datasource.username=9bgO79mG0B
-spring.datasource.name=9bgO79mG0B
+spring.datasource.url=jdbc:mysql://localhost:3306/ingredient?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.name=root
 spring.datasource.hikari.maximum-pool-size=2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -11,4 +11,4 @@ spring.jpa.properties.useUnicode=true
 spring.jpa.properties.characterEncoding=UTF8
 spring.jpa.properties.CharSet=UTF8
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
